# mini-aiman

./: .env.example  2GB_RAM_OPTIMIZATION_COMPLETE.md  ANDROID_OPTIMIZATION.md  ANIMATION_CONTROLS_DEBUG.md  ANIMATION_CONTROLS_TOGGLE_FIX.md  AUTO_RECONNECT_COMPLETE.md  AUTO_START_COMPLETE.md  CONTROLS_ADDED_TO_MENU.md  DEBUGGING_LIPSYNC.md  EXPOSURE_FIRST_ANIMATION_CONTROLS_FIXED.md  FIXES_APPLIED.md  HOLOGRAPHIC_CONTROLS_LOCATION.md  HOLOGRAPHIC_EFFECT.md  HOLOGRAPHIC_FPS_OPTIMIZATION.md  HOLOGRAPHIC_LAG_FIX.md  HOLOGRAPHIC_QUICK_START.md  HOLOGRAPHIC_TOGGLE_FIX.md  IMPLEMENTATION_SUMMARY.md  LIGHTING_CONTROLS_ADDED.md  LIGHTING_FIX_NODEAV ATAR.md  LIGHTING_REDUCED.md  LIPSYNC_DEBUGGING_GUIDE.md  LIPSYNC_FINAL_SOLUTION.md  LIPSYNC_QUICK_REFERENCE.md  LIPSYNC_SOLUTION.md  MUCH_DARKER_LIGHTING.md  PERFORMANCE_SUMMARY.md  PWA_FIX_GUIDE.md  PWA_FULLSCREEN_SETUP.md  PWA_ICON_FIX.md  PWA_QUICKSTART.md  QUALITY_QUICK_REFERENCE.md  QUALITY_SETTINGS.md  QUICK_FIX_LAG.md  QUICK_LIGHTING_GUIDE.md  QUICK_START.md  README.md  RESTART_INSTRUCTIONS.md  SERVICE_WORKER_FIX_CHROME_EXTENSION.md  START_NORMAL_MODE_MEDIUM_QUALITY.md  (+10 more)
app/: globals.css  layout.tsx
components/: app.tsx  avatar-animation-controls.tsx  performance-indicator.tsx  quality-selector.tsx  session-view.tsx  welcome.tsx
hooks/: fix.py  useAvatarAnimationCommands.ts  useProcessAgentAudio.ts  useTalkingHead.ts  useTalkingHeadAudioLipsync.ts  useTalkingHeadLiveKit.ts  useTalkingHeadSimpleLipsync.ts  useTalkingHeadStreaming.ts  (+2 more)
python_backend/: .env.example  README.md  lk_blingfire.py  main.py  pyproject.toml
(+26 files in other folders)
